Revert meego changes that break builds
Which basically was revert to version 0.3.1 of configure.ac and some
Makefile.am
Completed pinball-0.3.1-strictproto.patch

--- a/Makefile.am
+++ b/Makefile.am
@@ -1,6 +1,6 @@
 AUTOMAKE_OPTIONS = gnu
 
-SUBDIRS = addon base data src test
+SUBDIRS = libltdl addon base data src test
 
 EXTRA_DIST = bootstrap pinball.spec clean pinball.desktop
 
@@ -9,5 +9,3 @@ pinincludedir = $(includedir)/pinball
 pininclude_HEADERS = pinconfig.h
 
 bin_SCRIPTS = pinball-config
-
-ACLOCAL_AMFLAGS= -I libltdl/m4
