More cleans a little sync with version 3.1

--- a/Makefile.am
+++ b/Makefile.am
@@ -2,7 +2,7 @@ AUTOMAKE_OPTIONS = gnu
 
 ACLOCAL_AMFLAGS = -I libltdl/m4
 
-SUBDIRS = addon base data src test libltdl
+SUBDIRS =  libltdl addon base data src test
 
 EXTRA_DIST = bootstrap pinball.spec clean pinball.desktop
 
