--- a/configure.ac
+++ b/configure.ac
@@ -4,8 +4,8 @@ dnl init autoconf and automake
 AC_INIT(pinball, 0.3.2)
 
 AM_CONFIG_HEADER(pinconfig.h)
-AC_CONFIG_AUX_DIR([libltdl/config])
-AC_CONFIG_MACRO_DIR([libltdl/m4])
+AC_CONFIG_AUX_DIR([config])
+AC_CONFIG_MACRO_DIRS([m4])
 
 AC_CANONICAL_HOST
 AC_CANONICAL_TARGET
@@ -29,9 +29,9 @@ AC_PROG_CC
 AC_PROG_CXX
 AC_PROG_INSTALL
 AC_LIBTOOL_DLOPEN
+LT_CONFIG_LTDL_DIR([libltdl])
 AC_LIBLTDL_CONVENIENCE
 AC_PROG_LIBTOOL
-LT_CONFIG_LTDL_DIR([libltdl])
 LTDL_INIT
 
 AC_SUBST(INCLTDL)
